--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "apirestfull-nodejs",
   "version": "1.0.0",
   "description": "Node.js Rest API with Express, Sequelize and MySQL.",
-  "author": "jeferson Pimentel Sena (https://www.linkedin.com/in/jeferson-sena-ti/)",
+  "author": "Jeferson Pimentel Sena",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint:check": "npx eslint --ext .js ./",
     "lint:fix": "npx eslint --fix --ext .js ./",
@@ -11,7 +12,6 @@
     "start": "node index.js",
     "start:dev": "nodemon -L index.js"
   },
-
   "keywords": [
     "nodejs",
     "express",
@@ -23,7 +23,6 @@
     "editorconfig",
     "mysql"
   ],
-
   "license": "CC-BY-4.0",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -36,7 +35,6 @@
     "sequelize": "^6.29.0",
     "yup": "^1.0.0"
   },
-
   "devDependencies": {
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
@@ -44,8 +42,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4"
-  }
+  },
 
-  
-
+  "contributors": [
+    {
+      "name": "jeferson Pimentel Sena",
+      "email": "jefinho368@gmail.com"
+    }
+  ]
 }
